--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,13 @@
      -->
     <header class="header">
       <div class="header__container">
-        <a href="#" class="header__logo">
-          <img src="./img/weatherbro_logo.svg" alt="" />
-        </a>
+        <div class="header__image">
+          <img src="./img/night-moon.svg" />
+        </div>
+        <div class="header__location-info">
+          <div class="header__location-location">Schwerin</div>
+          <div class="header__location-location">Mittwoch 11:37</div>
+        </div>
         <div class="header__search-view">
           <input
             type="search"
@@ -32,8 +36,10 @@
             placeholder="Suche Stadt"
           />
         </div>
-        <button class="header--current-location-button">
-          <i class="fa-solid fa-magnifying-glass"></i>
+        <button
+          class="header__container-current-location-button button--secondary"
+        >
+          <i class="fa-solid fa-magnifying-glass icon"></i>
         </button>
       </div>
     </header>
@@ -42,20 +48,32 @@
       Now - Section
      -->
 
-    <section id="nowSection">
-      <div class="nowSection__container">
-        <div class="nowSection__title">19°C</div>
-        <div class="nowSection__sky-informations">Clear Sky</div>
+    <section id="now-section">
+      <div class="now-section__container">
+        <div class="now-section__title">19°C</div>
+        <div class="now-section__sky-informations">Clear Sky</div>
         <hr />
-        <div class="nowSection__date-container">
+        <div class="now-section__date-container">
           <i class="fa-regular fa-calendar-days"></i>
           <span class="date-container__date">Mittwoch, 13.12.2023</span>
         </div>
-        <div class="nowSection__location-container">
+        <div class="now-section__location-container">
           <i class="fa-regular fa-calendar-days"></i>
           <span class="location-container__location">Schwerin, DE</span>
         </div>
       </div>
     </section>
+
+    <!-- 
+      Todays Highlights section
+     -->
+
+    <!-- 
+      5 Days Forecast section
+    -->
+
+    <!-- 
+      Course of the day
+    -->
   </body>
 </html>
