update styling / header section

--- a/src/index.html
+++ b/src/index.html
@@ -29,18 +29,19 @@
           <div class="header__location-location">Schwerin</div>
           <div class="header__location-location">Mittwoch 11:37</div>
         </div>
-        <div class="header__search-view">
+
+        <div class="header__search-bar">
           <input
             type="search"
             class="search-view--input"
             placeholder="Suche Stadt"
           />
+          <button
+            class="header__container-current-location-button button--secondary"
+          >
+            <i class="fa-solid fa-magnifying-glass icon"></i>
+          </button>
         </div>
-        <button
-          class="header__container-current-location-button button--secondary"
-        >
-          <i class="fa-solid fa-magnifying-glass icon"></i>
-        </button>
       </div>
     </header>
 
