update styling / hourly-forecast section

--- a/src/index.html
+++ b/src/index.html
@@ -52,15 +52,17 @@
     <section id="now-section">
       <div class="now-section__container">
         <div class="now-section__title">19°C</div>
-        <div class="now-section__sky-informations">Clear Sky</div>
-        <hr />
-        <div class="now-section__date-container">
-          <i class="fa-regular fa-calendar-days"></i>
-          <span class="date-container__date">Mittwoch, 13.12.2023</span>
+        <div class="now-section__rain-probability-containter">
+          <i class="fa-solid fa-umbrella"></i>
+          <div class="now-section__rain-probability">90%</div>
         </div>
-        <div class="now-section__location-container">
-          <i class="fa-regular fa-calendar-days"></i>
-          <span class="location-container__location">Schwerin, DE</span>
+        <div class="now-section__sky-informations-container">
+          <img
+            class="sky-informations-image"
+            src="./img/icon_fullmonn.svg"
+            alt=""
+          />
+          <div class="now-section__sky-informations"></div>
         </div>
       </div>
     </section>
@@ -68,6 +70,146 @@
     <!-- 
       Todays Highlights section
      -->
+
+    <section id="hourly-forecast">
+      <div class="hourly-forecast__title">Tagesvorhersage</div>
+      <ul class="hourly-forecast__list">
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">2 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div class="hourly-forecast__rain-probability">60%</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">4 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">6 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">8 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">10 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">12 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">14 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">16 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">18 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">20 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">22 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+        <div class="hourly-forecast__list-card">
+          <div class="hourly-forecast__time">0 Uhr</div>
+          <img
+            src="./img/icon_fullmonn.svg"
+            alt=""
+            class="hourly-forecast__icon"
+          />
+          <div class="hourly-forecast__temperature">15°C</div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="hourly-forecast__windinformationens">10 km/h</div>
+        </div>
+      </ul>
+    </section>
 
     <!-- 
       5 Days Forecast section
