implement icons, header design update

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,15 @@
           />
           <div class="now-section__sky-informations"></div>
         </div>
+        <div class="now-section__feelsLike">Gefühlt wie 17 °C</div>
+        <div class="now-section__humidity-container">
+          <i class="fa-solid fa-droplet"></i>
+          <div class="humidity__value">80%</div>
+        </div>
+        <div class="now-section__wind-informations-container">
+          <i class="fa-solid fa-wind icon"></i>
+          <div class="wind-informations__value">22 km/h</div>
+        </div>
       </div>
     </section>
 
@@ -72,7 +81,9 @@
      -->
 
     <section id="hourly-forecast">
-      <div class="hourly-forecast__title">Tagesvorhersage</div>
+      <div class="hourly-forecast__title" style="margin-inline: 1rem">
+        Tagesvorhersage
+      </div>
       <ul class="hourly-forecast__list">
         <div class="hourly-forecast__list-card">
           <div class="hourly-forecast__time">2 Uhr</div>
@@ -90,35 +101,41 @@
         <div class="hourly-forecast__list-card">
           <div class="hourly-forecast__time">4 Uhr</div>
           <img
-            src="./img/icon_fullmonn.svg"
+            src="./img/icon_sun_clouds-rain.svg"
             alt=""
             class="hourly-forecast__icon"
           />
           <div class="hourly-forecast__temperature">15°C</div>
           <i class="fa-solid fa-wind icon"></i>
           <div class="hourly-forecast__windinformationens">10 km/h</div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div class="hourly-forecast__rain-probability">60%</div>
         </div>
         <div class="hourly-forecast__list-card">
           <div class="hourly-forecast__time">6 Uhr</div>
           <img
-            src="./img/icon_fullmonn.svg"
+            src="./img/icon_fullsun.svg"
             alt=""
             class="hourly-forecast__icon"
           />
           <div class="hourly-forecast__temperature">15°C</div>
           <i class="fa-solid fa-wind icon"></i>
           <div class="hourly-forecast__windinformationens">10 km/h</div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div class="hourly-forecast__rain-probability">60%</div>
         </div>
         <div class="hourly-forecast__list-card">
           <div class="hourly-forecast__time">8 Uhr</div>
           <img
-            src="./img/icon_fullmonn.svg"
+            src="./img/icon_sun-with-clouds.svg"
             alt=""
             class="hourly-forecast__icon"
           />
           <div class="hourly-forecast__temperature">15°C</div>
           <i class="fa-solid fa-wind icon"></i>
           <div class="hourly-forecast__windinformationens">10 km/h</div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div class="hourly-forecast__rain-probability">60%</div>
         </div>
         <div class="hourly-forecast__list-card">
           <div class="hourly-forecast__time">10 Uhr</div>
@@ -130,83 +147,34 @@
           <div class="hourly-forecast__temperature">15°C</div>
           <i class="fa-solid fa-wind icon"></i>
           <div class="hourly-forecast__windinformationens">10 km/h</div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div class="hourly-forecast__rain-probability">60%</div>
         </div>
         <div class="hourly-forecast__list-card">
           <div class="hourly-forecast__time">12 Uhr</div>
           <img
-            src="./img/icon_fullmonn.svg"
+            src="./img/icon_fullsun.svg"
             alt=""
             class="hourly-forecast__icon"
           />
           <div class="hourly-forecast__temperature">15°C</div>
           <i class="fa-solid fa-wind icon"></i>
           <div class="hourly-forecast__windinformationens">10 km/h</div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div class="hourly-forecast__rain-probability">60%</div>
         </div>
         <div class="hourly-forecast__list-card">
           <div class="hourly-forecast__time">14 Uhr</div>
           <img
-            src="./img/icon_fullmonn.svg"
+            src="./img/icon_sun-clouds-snow.svg"
             alt=""
             class="hourly-forecast__icon"
           />
           <div class="hourly-forecast__temperature">15°C</div>
           <i class="fa-solid fa-wind icon"></i>
           <div class="hourly-forecast__windinformationens">10 km/h</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">16 Uhr</div>
-          <img
-            src="./img/icon_fullmonn.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">18 Uhr</div>
-          <img
-            src="./img/icon_fullmonn.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">20 Uhr</div>
-          <img
-            src="./img/icon_fullmonn.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">22 Uhr</div>
-          <img
-            src="./img/icon_fullmonn.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">0 Uhr</div>
-          <img
-            src="./img/icon_fullmonn.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div class="hourly-forecast__rain-probability">60%</div>
         </div>
       </ul>
     </section>
