update now-section design

--- a/src/index.html
+++ b/src/index.html
@@ -51,12 +51,12 @@
 
     <section id="now-section">
       <div class="now-section__container">
-        <div class="now-section__title">19°C</div>
-        <div class="now-section__rain-probability-containter">
+        <div class="now-section__temperature grid-item">19°C</div>
+        <div class="now-section__rain-probability-containter grid-item">
           <i class="fa-solid fa-umbrella"></i>
           <div class="now-section__rain-probability">90%</div>
         </div>
-        <div class="now-section__sky-informations-container">
+        <div class="now-section__sky-informations-container grid-item">
           <img
             class="sky-informations-image"
             src="./img/icon_fullmonn.svg"
@@ -64,12 +64,15 @@
           />
           <div class="now-section__sky-informations"></div>
         </div>
-        <div class="now-section__feelsLike">Gefühlt wie 17 °C</div>
-        <div class="now-section__humidity-container">
+        <div class="now-section__feelsLike grid-item">
+          Gefühlt wie <br />
+          17 °C
+        </div>
+        <div class="now-section__humidity-container grid-item">
           <i class="fa-solid fa-droplet"></i>
           <div class="humidity__value">80%</div>
         </div>
-        <div class="now-section__wind-informations-container">
+        <div class="now-section__wind-informations-container grid-item">
           <i class="fa-solid fa-wind icon"></i>
           <div class="wind-informations__value">22 km/h</div>
         </div>
