update forecasts sections

--- a/src/index.html
+++ b/src/index.html
@@ -85,97 +85,190 @@
 
     <section id="hourly-forecast">
       <div class="hourly-forecast__title title--margin">Stundenvorhersage</div>
-      <ul class="hourly-forecast__list">
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">2 Uhr</div>
-          <img
-            src="./img/icon_fullmonn.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
-          <i class="fa-solid fa-umbrella icon"></i>
-          <div class="hourly-forecast__rain-probability">60%</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">4 Uhr</div>
-          <img
-            src="./img/icon_sun_clouds-rain.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
-          <i class="fa-solid fa-umbrella icon"></i>
-          <div class="hourly-forecast__rain-probability">60%</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">6 Uhr</div>
+      <ul class="hourly-forecast__list forecast__list">
+        <div class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">3 Uhr</div>
           <img
             src="./img/icon_fullsun.svg"
             alt=""
-            class="hourly-forecast__icon"
+            class="hourly-forecast__icon forecast__icon"
           />
-          <div class="hourly-forecast__temperature">15°C</div>
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
           <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
           <i class="fa-solid fa-umbrella icon"></i>
-          <div class="hourly-forecast__rain-probability">60%</div>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
         </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">8 Uhr</div>
-          <img
-            src="./img/icon_sun-with-clouds.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
-          <i class="fa-solid fa-umbrella icon"></i>
-          <div class="hourly-forecast__rain-probability">60%</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">10 Uhr</div>
-          <img
-            src="./img/icon_fullmonn.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
-          <i class="fa-solid fa-umbrella icon"></i>
-          <div class="hourly-forecast__rain-probability">60%</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">12 Uhr</div>
-          <img
-            src="./img/icon_fullsun.svg"
-            alt=""
-            class="hourly-forecast__icon"
-          />
-          <div class="hourly-forecast__temperature">15°C</div>
-          <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformationens">10 km/h</div>
-          <i class="fa-solid fa-umbrella icon"></i>
-          <div class="hourly-forecast__rain-probability">60%</div>
-        </div>
-        <div class="hourly-forecast__list-card">
-          <div class="hourly-forecast__time">14 Uhr</div>
+        <div class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">6 Uhr</div>
           <img
             src="./img/icon_sun-clouds-snow.svg"
             alt=""
-            class="hourly-forecast__icon"
+            class="hourly-forecast__icon forecast__icon"
           />
-          <div class="hourly-forecast__temperature">15°C</div>
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
           <i class="fa-solid fa-wind icon"></i>
-          <div class="hourly-forecast__windinformations">10 km/h</div>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
           <i class="fa-solid fa-umbrella icon"></i>
-          <div class="hourly-forecast__rain-probability">60%</div>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </div>
+        <div class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">9 Uhr</div>
+          <img
+            src="./img/icon_sun-clouds-snow.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </div>
+        <div class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">12 Uhr</div>
+          <img
+            src="./img/icon_sun_clouds-rain.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </div>
+        <div class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">15 Uhr</div>
+          <img
+            src="./img/icon_fullsun.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </div>
+        <div class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">18 Uhr</div>
+          <img
+            src="./img/icon_fullsun.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </div>
+        <div class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">21 Uhr</div>
+          <img
+            src="./img/icon_sun_clouds-rain.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </div>
+        <div class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">0 Uhr</div>
+          <img
+            src="./img/icon_fullmoon.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
         </div>
       </ul>
     </section>
@@ -214,8 +307,125 @@
       5 Days Forecast section
     -->
 
-    <!-- 
-      Course of the day
-    -->
+    <section id="daytime-forecast">
+      <div class="daytime-forecast__title title--margin">5-Tage Vorhersage</div>
+      <ul class="hourly-forecast__list forecast__list">
+        <li class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">Morgen</div>
+          <img
+            src="./img/icon_fullsun.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </li>
+        <li class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">Dienstag</div>
+          <img
+            src="./img/icon_sun-with-clouds.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </li>
+        <li class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">Mittwoch</div>
+          <img
+            src="./img/icon_sun-with-clouds.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </li>
+        <li class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">Donnerstag</div>
+          <img
+            src="./img/icon_fullsun.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </li>
+        <li class="hourly-forecast__list-card forecast__list-card">
+          <div class="hourly-forecast__time forecast__time">Freitag</div>
+          <img
+            src="./img/icon_sun_clouds-rain.svg"
+            alt=""
+            class="hourly-forecast__icon forecast__icon"
+          />
+          <div class="hourly-forecast__temperature forecast__temperature">
+            15°C
+          </div>
+          <i class="fa-solid fa-wind icon"></i>
+          <div
+            class="hourly-forecast__windinformationens forecast__windinformationens"
+          >
+            10 km/h
+          </div>
+          <i class="fa-solid fa-umbrella icon"></i>
+          <div
+            class="hourly-forecast__rain-probability forecast__rain-probability"
+          >
+            60%
+          </div>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
