--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="header__location-info">
           <div class="header__location-location">Schwerin</div>
-          <div class="header__location-location">Mittwoch 11:37</div>
+          <div class="header__location-time">Mittwoch 11:37</div>
         </div>
 
         <div class="header__search-bar">
@@ -39,7 +39,7 @@
           <button
             class="header__container-current-location-button button--secondary"
           >
-            <i class="fa-solid fa-magnifying-glass icon"></i>
+            <i class="fa-solid fa-magnifying-glass icon--middle"></i>
           </button>
         </div>
       </div>
@@ -59,7 +59,7 @@
         <div class="now-section__sky-informations-container grid-item">
           <img
             class="sky-informations-image"
-            src="./img/icon_fullmonn.svg"
+            src="./img/icon_sun-with-clouds.svg"
             alt=""
           />
           <div class="now-section__sky-informations"></div>
@@ -286,7 +286,7 @@
           <img
             src="./img/icon_sunrise.png"
             alt=""
-            class="sunrise__image icon--middle"
+            class="sunrise__image icon--big"
           />
           <div class="sunrise__titel">Sonnenaufgang</div>
           <div class="sunrise__time">8:22 Uhr</div>
@@ -295,7 +295,7 @@
           <img
             src="./img/icon__halfmoon.png"
             alt=""
-            class="sunrise__image icon--middle"
+            class="sunrise__image icon--big"
           />
           <div class="sunset__titel">Sonnenuntergang</div>
           <div class="sunset__time">15:52 Uhr</div>
