add dropdown menu

--- a/src/index.html
+++ b/src/index.html
@@ -541,6 +541,18 @@
           </div>
         </div>
       </section>
+
+      <!-- 
+      DROP-DOWN__MENU
+      -->
+
+      <div class="drop-down-menu__container">
+        <ul class="drop-down__li">
+          <li class="drop-down__list-entry">Schwerin</li>
+          <li class="drop-down__list-entry">Schwerin</li>
+          <li class="drop-down__list-entry">Schwerin</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
