--- a/src/index.html
+++ b/src/index.html
@@ -548,9 +548,7 @@
 
       <div class="drop-down-menu__container">
         <ul class="drop-down__li">
-          <li class="drop-down__list-entry">Schwerin</li>
-          <li class="drop-down__list-entry">Schwerin</li>
-          <li class="drop-down__list-entry">Schwerin</li>
+          <!-- <li class="drop-down__list-entry">Schwerin</li> -->
         </ul>
       </div>
     </div>
