--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,6 @@
         </div>
 
         <div class="header__search-bar">
-          <!-- <input
-            type="search"
-            class="search-view--input"
-            placeholder="Suche Stadt"
-          /> -->
           <button class="current-location__button">
             <i class="fa-solid fa-magnifying-glass icon--middle"></i>
           </button>
@@ -548,7 +543,12 @@
       <div class="drop-down">
         <div class="drop-down-menu__container">
           <div class="search__container">
-            <input type="text" name="searchfield" class="drop-down-menu__searchfield" placeholder="Welchen Ort suchst du?">
+            <input
+              type="text"
+              name="searchfield"
+              class="drop-down-menu__searchfield"
+              placeholder="Welchen Ort suchst du?"
+            />
             <div class="drop-down__search_button">
               <i class="fa-solid fa-magnifying-glass icon--middle"></i>
             </div>
