add now-description + sunrise-set values

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,9 @@
      -->
     <div class="weatherdata__container">
       <section id="now-section">
+        <div class="now-section__weather-description">
+          Aktuell: Nachts weiterhin dunkel!
+        </div>
         <div class="now-section__container">
           <div class="now-section__temperature grid-item">19°C</div>
           <div class="now-section__rain-probability-containter grid-item">
