add hourly forecast

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
           </div>
           <ul class="hourly-forecast__list forecast__list">
             <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">3 Uhr</div>
+              <!-- <div class="hourly-forecast__time forecast__time">3 Uhr</div>
               <div class="informations__container">
                 <img
                   src="./img/icon_fullsun.svg"
@@ -315,6 +315,7 @@
                   60%
                 </div>
               </div>
+            </li> -->
             </li>
           </ul>
         </div>
